@@ -1,3 +1,9 @@
+2016-03-22  Kelvin Nilsen  <kelvin@gcc.gnu.org>
+
+	* gcc.target/powerpc/p9-permute.c: Generalize test to run on
+        big-endian Power9 in addition to little-endian Power9.
+	* gcc.target/powerpc/p9-vpermr.c: New test.
+
 2016-03-14  Bernd Schmidt  <bschmidt@redhat.com>
 
 	PR target/70083
